sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value j
    j=i
    ^AlgBubbleSort1:7: error: not found: value j
    while (j<i){
           ^AlgBubbleSort1:11: error: not found: value j
      j=j+1
      ^