sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a = 0
  for (i<- 0 to getNombreValeurs()){
    
    j=i
    while (j<i){
      echange(a, i)
      echange(i, i+1)
      echange(i+1, a)
      j=j+1
    }
  }
}